2002-06-20  Eric Baudais  <baudais@kkpsi.org>

	* 2.x/g2releasenotes.xml: Redid the markup at jfleck's request.

2002-05-17  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/package-list: Update version numbers.

2002-05-17  Glynn Foster  <glynn.foster@sun.com>
		
	* application_todos.pl: Remove the script too..even though it
	was much more 1337 than Jeff's poopy perl script ;)

2002-05-16  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/todo.gnome2: Removing in preference to bugzilla queries.

2002-04-16  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/todo.gnome2: More updates from Bastien for gnome-games.

2002-04-15  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/todo.gnome2: Update gnome-games from Bastien.

2002-04-15  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/todo.gnome2: Updates from Iain. He rocks, being the 
	only one to have completed all his gnome-media items.

2002-03-07  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/todo.gnome2: Updates from Kevin for gnome-applets and utils.
	ROCK ON!

2002-03-06  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/todo.gnome2: Update glade. Damon rocks!

2002-03-06  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/todo.gnome2: Damn you Hallski! Splitting out gnome-core
	into panel and session and updating.

2002-03-06  Glynn Foster  <glynn.foster@sun.com>

	* 2.x/todo.gnome2: Updates on yelp.

2002-03-05  Glynn Foster <glynn.foster@sun.com>

	* 2.x/todo.gnome2: Update the yelp TODO list

2002-02-12  Paolo Maggi  <maggi@athena.polito.it>

	* 2.x/todo.gnome2: Update the gedit TODO list

2002-02-17  Jamin Gray <jgray@writeme.com> 

	* 2.x/package-list: Updated some contacts and version numbers 

2002-02-11  Jens Finke <jens@triq.net>

	* 2.x/package-list: Updated eog version and added myself to
	contacts, added atomix to fifth toe section.

2002-01-25  Paolo Maggi  <maggi@athena.polito.it>

	* 2.x/todo.gnome2: Update the gedit TODO list

2002-01-21  jacob berkman  <jacob@ximian.com>

	* gnome-1.4-branches: update bug-buddy
